change update freq, come back to this